--- a/src/qt/forms/minerwindow.ui
+++ b/src/qt/forms/minerwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
-    <height>300</height>
+    <width>594</width>
+    <height>361</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -19,9 +19,9 @@
   <property name="windowTitle">
    <string>Miner console</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout_1" stretch="0,1">
+  <layout class="QHBoxLayout" name="horizontalLayout_1" stretch="0,0">
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout_1" stretch="0,0,1,0,0,0">
+    <layout class="QVBoxLayout" name="optionsVerticalLayout" stretch="0,0,0,0,0,0">
      <property name="minimumSize" stdset="0">
       <size>
        <width>400</width>
@@ -29,7 +29,7 @@
       </size>
      </property>
      <item>
-      <layout class="QGridLayout" name="gridLayout_options">
+      <layout class="QGridLayout" name="gridLayout_1">
        <item row="1" column="0" alignment="Qt::AlignTop">
         <widget class="QLabel" name="passphraseLabel">
          <property name="minimumSize">
@@ -86,7 +86,7 @@
       <widget class="QListWidget" name="plotfileList"/>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_plotfile">
+      <layout class="QHBoxLayout" name="opPlotfileHorizontalLayout">
        <item>
         <widget class="QPushButton" name="addPlotFileButton">
          <property name="text">
@@ -104,13 +104,16 @@
       </layout>
      </item>
      <item>
-      <spacer name="verticalSpacer">
+      <spacer name="startMiningVerticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Fixed</enum>
+       </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>20</width>
+         <width>0</width>
          <height>10</height>
         </size>
        </property>
@@ -133,14 +136,31 @@
     </layout>
    </item>
    <item>
-    <widget class="QPlainTextEdit" name="logPlainTextEdit">
-     <property name="readOnly">
-      <bool>true</bool>
-     </property>
-     <property name="backgroundVisible">
-      <bool>false</bool>
-     </property>
-    </widget>
+    <layout class="QVBoxLayout" name="logVerticalLayout">
+     <item>
+      <widget class="QLabel" name="logLabel">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Log</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPlainTextEdit" name="logPlainTextEdit">
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+       <property name="backgroundVisible">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
