--- a/src/qt/forms/minerwindow.ui
+++ b/src/qt/forms/minerwindow.ui
@@ -19,7 +19,7 @@
   <property name="windowTitle">
    <string>Miner console</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout_1" stretch="0,0">
+  <layout class="QHBoxLayout" name="horizontalLayout_1" stretch="1,2">
    <item>
     <layout class="QVBoxLayout" name="optionsVerticalLayout" stretch="0,0,0,0,0,0">
      <property name="minimumSize" stdset="0">
@@ -83,7 +83,20 @@
       </widget>
      </item>
      <item>
-      <widget class="QListWidget" name="plotfileList"/>
+      <widget class="QListWidget" name="plotfileList">
+       <property name="minimumSize">
+        <size>
+         <width>360</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>16777215</height>
+        </size>
+       </property>
+      </widget>
      </item>
      <item>
       <layout class="QHBoxLayout" name="opPlotfileHorizontalLayout">
