--- a/src/qt/forms/minerwindow.ui
+++ b/src/qt/forms/minerwindow.ui
@@ -34,12 +34,12 @@
      </property>
      <item>
       <layout class="QGridLayout" name="gridLayout_1">
-       <item row="1" column="0" alignment="Qt::AlignTop">
+       <item row="1" column="0" alignment="Qt::AlignVCenter">
         <widget class="QLabel" name="passphraseLabel">
          <property name="minimumSize">
           <size>
            <width>80</width>
-           <height>20</height>
+           <height>0</height>
           </size>
          </property>
          <property name="text">
@@ -50,12 +50,12 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="2" alignment="Qt::AlignTop">
+       <item row="1" column="2" alignment="Qt::AlignVCenter">
         <widget class="QLineEdit" name="passphraseLineEdit">
          <property name="minimumSize">
           <size>
            <width>200</width>
-           <height>20</height>
+           <height>0</height>
           </size>
          </property>
          <property name="placeholderText">
@@ -63,15 +63,21 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
+       <item row="2" column="0" alignment="Qt::AlignVCenter">
         <widget class="QLabel" name="targetDeadlineLabel">
          <property name="text">
           <string>TargetDeadline</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="2">
+       <item row="2" column="2" alignment="Qt::AlignVCenter">
         <widget class="QLineEdit" name="targetDeadlineLineEdit">
+         <property name="minimumSize">
+          <size>
+           <width>200</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="placeholderText">
           <string>&quot;123456&quot; Or &quot;1y 2d 12:34:56&quot;</string>
          </property>
@@ -92,12 +98,6 @@
         <size>
          <width>360</width>
          <height>0</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>16777215</width>
-         <height>16777215</height>
         </size>
        </property>
       </widget>
