--- a/src/qt/forms/plotwindow.ui
+++ b/src/qt/forms/plotwindow.ui
@@ -28,90 +28,12 @@
     <layout class="QVBoxLayout" name="optionsVverticalLayout">
      <item>
       <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0" alignment="Qt::AlignTop">
-        <widget class="QLabel" name="passphraseLabel">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>20</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>Passprase</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1" colspan="2" alignment="Qt::AlignTop">
-        <widget class="QLineEdit" name="passphraseLineEdit">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>20</height>
-          </size>
-         </property>
-         <property name="placeholderText">
-          <string>Enter your passphrase</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0" alignment="Qt::AlignTop">
-        <widget class="QLabel" name="startNonceLabel">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>20</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>Start Nonce</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1" colspan="2" alignment="Qt::AlignLeft|Qt::AlignTop">
-        <widget class="QSpinBox" name="startNonceSpinBox">
-         <property name="minimumSize">
-          <size>
-           <width>200</width>
-           <height>20</height>
-          </size>
-         </property>
-         <property name="maximum">
-          <number>999999999</number>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0" alignment="Qt::AlignTop">
-        <widget class="QLabel" name="threadsLabel">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>20</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>Thread Number</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0" alignment="Qt::AlignTop">
-        <widget class="QLabel" name="noncesLabel">
-         <property name="minimumSize">
-          <size>
-           <width>0</width>
-           <height>20</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>Nonces</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1" colspan="2" alignment="Qt::AlignLeft|Qt::AlignTop">
+       <item row="3" column="1" colspan="2" alignment="Qt::AlignLeft|Qt::AlignVCenter">
         <widget class="QSpinBox" name="threadsSpinBox">
          <property name="minimumSize">
           <size>
            <width>200</width>
-           <height>20</height>
+           <height>0</height>
           </size>
          </property>
          <property name="minimum">
@@ -125,28 +47,25 @@
          </property>
         </widget>
        </item>
-       <item row="4" column="1" alignment="Qt::AlignTop">
-        <widget class="QLineEdit" name="plotpileLineEdit">
+       <item row="1" column="1" colspan="2" alignment="Qt::AlignLeft|Qt::AlignVCenter">
+        <widget class="QSpinBox" name="startNonceSpinBox">
          <property name="minimumSize">
           <size>
-           <width>0</width>
-           <height>20</height>
+           <width>200</width>
+           <height>0</height>
           </size>
          </property>
-         <property name="readOnly">
-          <bool>true</bool>
-         </property>
-         <property name="placeholderText">
-          <string>Select your plot file path</string>
+         <property name="maximum">
+          <number>999999999</number>
          </property>
         </widget>
        </item>
-       <item row="2" column="1" colspan="2" alignment="Qt::AlignLeft|Qt::AlignTop">
+       <item row="2" column="1" colspan="2" alignment="Qt::AlignLeft|Qt::AlignVCenter">
         <widget class="QSpinBox" name="noncesSpinBox">
          <property name="minimumSize">
           <size>
            <width>200</width>
-           <height>20</height>
+           <height>0</height>
           </size>
          </property>
          <property name="minimum">
@@ -156,25 +75,76 @@
           <number>999999999</number>
          </property>
          <property name="value">
-          <number>10000</number>
+          <number>1</number>
          </property>
         </widget>
        </item>
-       <item row="4" column="0" alignment="Qt::AlignTop">
-        <widget class="QLabel" name="plotpathLabel">
+       <item row="5" column="0" alignment="Qt::AlignVCenter">
+        <widget class="QLabel" name="plotfolderLabel">
+         <property name="text">
+          <string>Plot folder</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0" alignment="Qt::AlignVCenter">
+        <widget class="QLabel" name="passphraseLabel">
          <property name="minimumSize">
           <size>
-           <width>0</width>
-           <height>20</height>
+           <width>80</width>
+           <height>0</height>
           </size>
          </property>
          <property name="text">
-          <string>Plot Path</string>
+          <string>Passprase</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="2" alignment="Qt::AlignTop">
-        <widget class="QPushButton" name="setPlotPathPushButton">
+       <item row="2" column="0" alignment="Qt::AlignVCenter">
+        <widget class="QLabel" name="noncesLabel">
+         <property name="text">
+          <string>Nonces</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0" alignment="Qt::AlignVCenter">
+        <widget class="QLabel" name="startNonceLabel">
+         <property name="text">
+          <string>Start nonce</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0" alignment="Qt::AlignVCenter">
+        <widget class="QLabel" name="threadsLabel">
+         <property name="text">
+          <string>Thread number</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1" alignment="Qt::AlignVCenter">
+        <widget class="QLineEdit" name="plotfolderLineEdit">
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+         <property name="placeholderText">
+          <string>Select your plot file folder</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1" colspan="2" alignment="Qt::AlignVCenter">
+        <widget class="QLineEdit" name="passphraseLineEdit">
+         <property name="placeholderText">
+          <string>Enter your passphrase</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="2" alignment="Qt::AlignVCenter">
+        <widget class="QPushButton" name="setPlotPathButton">
+         <property name="minimumSize">
+          <size>
+           <width>30</width>
+           <height>20</height>
+          </size>
+         </property>
          <property name="maximumSize">
           <size>
            <width>30</width>
@@ -183,6 +153,29 @@
          </property>
          <property name="text">
           <string>...</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
+        <widget class="QLabel" name="memoryGBLabel">
+         <property name="text">
+          <string>Memory(GB)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1" colspan="2" alignment="Qt::AlignLeft|Qt::AlignVCenter">
+        <widget class="QSpinBox" name="memoryGBSpinBox">
+         <property name="minimumSize">
+          <size>
+           <width>200</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="minimum">
+          <number>1</number>
+         </property>
+         <property name="maximum">
+          <number>256</number>
          </property>
         </widget>
        </item>
@@ -215,7 +208,7 @@
       </spacer>
      </item>
      <item alignment="Qt::AlignHCenter">
-      <widget class="QPushButton" name="startPlotPushButton">
+      <widget class="QPushButton" name="startPlotButton">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
