--- a/src/qt/forms/plotwindow.ui
+++ b/src/qt/forms/plotwindow.ui
@@ -21,7 +21,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="../bitcoin.qrc">
-    <normaloff>:/icons/hd</normaloff>:/icons/hd</iconset>
+    <normaloff>:/icons/hd_plot</normaloff>:/icons/hd_plot</iconset>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout" stretch="2,3">
    <item>
@@ -139,18 +139,6 @@
        </item>
        <item row="5" column="2" alignment="Qt::AlignVCenter">
         <widget class="QPushButton" name="setPlotPathButton">
-         <property name="minimumSize">
-          <size>
-           <width>30</width>
-           <height>20</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>30</width>
-           <height>16777215</height>
-          </size>
-         </property>
          <property name="text">
           <string>...</string>
          </property>
@@ -207,16 +195,17 @@
        </property>
       </spacer>
      </item>
-     <item alignment="Qt::AlignHCenter">
+     <item>
       <widget class="QPushButton" name="startPlotButton">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
        <property name="text">
         <string>Start plot</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../bitcoin.qrc">
+         <normaloff>:/icons/hd_plot</normaloff>:/icons/hd_plot</iconset>
+       </property>
+       <property name="default">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
