--- a/src/qt/forms/plotwindow.ui
+++ b/src/qt/forms/plotwindow.ui
@@ -131,6 +131,9 @@
          <property name="placeholderText">
           <string>Enter your passphrase</string>
          </property>
+         <property name="echoMode">
+          <enum>QLineEdit::PasswordEchoOnEdit</enum>
+         </property>
         </widget>
        </item>
        <item row="5" column="2" alignment="Qt::AlignVCenter">
