--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -18,6 +18,7 @@
         <file alias="transaction_4">res/icons/clock4.png</file>
         <file alias="transaction_5">res/icons/clock5.png</file>
         <file alias="eye">res/icons/eye.png</file>
+        <file alias="eye_close">res/icons/eye_close.png</file>
         <file alias="eye_minus">res/icons/eye_minus.png</file>
         <file alias="eye_plus">res/icons/eye_plus.png</file>
         <file alias="options">res/icons/configure.png</file>
