--- a/src/qt/forms/minerwindow.ui
+++ b/src/qt/forms/minerwindow.ui
@@ -30,7 +30,14 @@
      </property>
      <item>
       <layout class="QGridLayout" name="gridLayout_1">
-       <item row="1" column="0" alignment="Qt::AlignVCenter">
+       <item row="2" column="0" alignment="Qt::AlignVCenter">
+        <widget class="QLabel" name="targetDeadlineLabel">
+         <property name="text">
+          <string>TargetDeadline</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0" alignment="Qt::AlignTop">
         <widget class="QLabel" name="passphraseLabel">
          <property name="minimumSize">
           <size>
@@ -42,40 +49,59 @@
           <string>Passphrase</string>
          </property>
          <property name="alignment">
-          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
          </property>
         </widget>
        </item>
-       <item row="1" column="2" alignment="Qt::AlignVCenter">
-        <widget class="QLineEdit" name="passphraseLineEdit">
+       <item row="1" column="2" alignment="Qt::AlignTop">
+        <widget class="QPlainTextEdit" name="passphraseEdit">
          <property name="minimumSize">
           <size>
            <width>200</width>
            <height>0</height>
           </size>
          </property>
-         <property name="echoMode">
-          <enum>QLineEdit::PasswordEchoOnEdit</enum>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>80</height>
+          </size>
+         </property>
+         <property name="plainText">
+          <string notr="true"/>
          </property>
          <property name="placeholderText">
           <string>Enter your passphrase</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="0" alignment="Qt::AlignVCenter">
-        <widget class="QLabel" name="targetDeadlineLabel">
+       <item row="1" column="3" alignment="Qt::AlignTop">
+        <widget class="QPushButton" name="togglePassphraseButton">
+         <property name="toolTip">
+          <string/>
+         </property>
          <property name="text">
-          <string>TargetDeadline</string>
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="../bitcoin.qrc">
+           <normaloff>:/icons/eye</normaloff>:/icons/eye</iconset>
+         </property>
+         <property name="checkable">
+          <bool>false</bool>
          </property>
         </widget>
        </item>
-       <item row="2" column="2" alignment="Qt::AlignVCenter">
+       <item row="2" column="2">
         <widget class="QLineEdit" name="targetDeadlineLineEdit">
          <property name="minimumSize">
           <size>
            <width>200</width>
            <height>0</height>
           </size>
+         </property>
+         <property name="toolTip">
+          <string>Results beyond this range will not be submitted.</string>
          </property>
          <property name="placeholderText">
           <string>&quot;123456&quot; Or &quot;1y 2d 12:34:56&quot;</string>
@@ -98,6 +124,12 @@
          <width>360</width>
          <height>0</height>
         </size>
+       </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::ExtendedSelection</enum>
+       </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectRows</enum>
        </property>
       </widget>
      </item>
@@ -170,6 +202,9 @@
       <widget class="QPlainTextEdit" name="logPlainTextEdit">
        <property name="readOnly">
         <bool>true</bool>
+       </property>
+       <property name="plainText">
+        <string notr="true"/>
        </property>
        <property name="backgroundVisible">
         <bool>false</bool>
